--- a/style1.scss
+++ b/style1.scss
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Segoe UI;
+    color: aliceblue;
 }
 .bg1{
     /* height: 1080px; */
@@ -34,6 +35,7 @@
     border-radius: 20px;
     /* background-color: rgba(0, 0, 0, 0.199); */
     display: flex;
+    margin-top: 40px;
     justify-content: space-between;
     align-items: center;
 }
@@ -77,7 +79,11 @@
     transition: .2s;
     cursor: pointer;
 }
-.nav-link:hover{
+.nav-link a{
+    text-decoration: none;
+    color: aliceblue;
+}
+.nav-link a:hover{
     /* background-color: #00ccff; */
     /* transform: scale(1.2); */
     /* box-shadow: #2fceff70 0px 0px 39px 0px; */
@@ -115,6 +121,116 @@
     color: rgba(0, 128, 0, 0); 
     
 }
+.bg1{
+    display: flex;
+    flex-direction: column;
+    
+
+}
+.login{
+    display: flex;
+    justify-content: center;
+    
+    height: 100vh;
+    margin-top: 62px;
+}
+.loginF{
+    /* border:white solid 2px; */
+}
+/* input[type=button]{
+    color: #ffffff;
+    background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
+    width: 100%;
+    height: 40px;
+    
+    border-radius: 5px;
+    border: none;
+} */
+
+.loginF{
+    width: 40%;
+    background-color: #00000054;
+    padding: 30px 30px;
+    border-radius: 20px;
+    height: fit-content;
+    padding-bottom: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    // align-items: center;
+    color: rgb(176, 195, 255);
+    h1{
+    // color: rgb(176, 195, 255);
+        margin-bottom: 30px;
+    }
+    input[type=text]{
+        width: 100%;
+        height: 40px;
+        border-radius: 10px ;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        background-color: rgba(63, 55, 127, 0.377);
+        border: none;
+    }
+
+    input[type=password]{
+        width: 100%;
+        height: 40px;
+        border-radius: 10px ;
+        margin-top: 10px;
+        background-color:rgba(63, 55, 127, 0.349);
+        border: none;
+
+    }
+    label{
+    color: rgb(116, 148, 255);
+
+        font-size: 15px;
+        margin-top: 5px;
+    }
+}
+
+.btn-grad {
+    background-image: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
+   padding: 10px 0px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   width: 100%;
+   color: white;            
+   border-radius: 10px;
+   display: block;
+   font-size: 20px;
+ }
+
+ .btn-grad:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
+
+.containermain{
+    width: 80%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* for mobile */
 
 
@@ -124,6 +240,7 @@
         width: 100%;
     }
     .container{
+        margin-top: auto;
         flex-direction: column;
         width: 95%;
     }
