--- a/style/style2.css
+++ b/style/style2.css
@@ -1,10 +1,8 @@
-$btncolor: #2952e3;
-
 * {
   margin: 0px;
   padding: 0px;
   font-family: Segoe UI;
-  color: rgb(182, 223, 255);
+  color: #addbff;
 }
 
 .bg1 {
@@ -103,12 +101,18 @@ $btncolor: #2952e3;
   -webkit-transition: 0.2s;
   transition: 0.2s;
   cursor: pointer;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
+
 .nav-link:hover {
   /* transition: transform .2s; */
+  -webkit-transform: scale(1.2);
   transform: scale(1.2);
 }
+
 .nav-link a {
   text-decoration: none;
   color: aliceblue;
@@ -154,6 +158,7 @@ $btncolor: #2952e3;
 
 .loginB:hover {
   background-color: #2243b9;
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
   /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
 }
@@ -188,14 +193,14 @@ $btncolor: #2952e3;
 }
 
 /* input[type=button]{
-      color: #ffffff;
-      background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
-      width: 100%;
-      height: 40px;
-      
-      border-radius: 5px;
-      border: none;
-  } */
+        color: #ffffff;
+        background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
+        width: 100%;
+        height: 40px;
+        
+        border-radius: 5px;
+        border: none;
+    } */
 .loginF {
   width: 40%;
   background-color: #00000054;
@@ -215,13 +220,7 @@ $btncolor: #2952e3;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  // align-items: center;
   color: #b0c3ff;
-
-  p {
-    margin-top: 20px;
-    text-align: center;
-  }
 }
 
 .loginF h1 {
@@ -229,9 +228,8 @@ $btncolor: #2952e3;
 }
 
 .loginF input[type="text"] {
-  width: 95%;
+  width: 100%;
   height: 40px;
-  padding: 0px 0px 0px 20px;
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 5px;
@@ -253,94 +251,15 @@ $btncolor: #2952e3;
   font-size: 15px;
   margin-top: 5px;
 }
-.loginF {
-  /* border:white solid 2px; */
-}
 
-/* input[type=button]{
-      color: #ffffff;
-      background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
-      width: 100%;
-      height: 40px;
-      
-      border-radius: 5px;
-      border: none;
-  } */
-.signupF {
-  width: 40%;
-  background-color: #00000054;
-  padding: 30px 30px;
-  border-radius: 20px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  padding-bottom: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  // align-items: center;
-  color: #b0c3ff;
-}
-
-.signupF h1 {
-  margin-bottom: 30px;
-}
-
-.signupF input[type="text"] {
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  background-color: rgba(63, 55, 127, 0.377);
-  border: none;
-}
-
-.signupF input[type="password"] {
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  margin-top: 10px;
-  background-color: rgba(63, 55, 127, 0.349);
-  border: none;
-}
-
-.signupF label {
-  color: #7494ff;
-  font-size: 15px;
-  margin-top: 5px;
-}
-.signupF p {
+.loginF p {
   text-align: center;
-  color: rgb(159, 236, 255);
-  margin-top: 20px;
-  margin-top: 30px;
-  a {
-    background-color: $btncolor;
-    padding: 5px 10px;
-    border-radius: 20px;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-decoration: none;
-    transition: 0.2s;
-    margin-left: 10px;
-  }
-  a:hover {
-    background-color: #4a6ce6;
-    transform: scale(1.5);
-  }
+  color: red;
 }
 
 .btn-grad {
   background-image: radial-gradient(circle, #8800ff 0%, #00d3ff 94%);
-  padding: 10px 10px;
+  padding: 10px 0px;
   text-align: center;
   text-transform: uppercase;
   -webkit-transition: 0.5s;
@@ -409,4 +328,7 @@ $btncolor: #2952e3;
   }
 }
 
+.try {
+  color: #1270c2;
+}
 /*# sourceMappingURL=style1.css.map */
