--- a/style/style.css
+++ b/style/style.css
@@ -1,138 +1,141 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: Segoe UI;
+  color: rgb(138, 168, 194);
+}
+.bg1 {
+  /* height: 1080px; */
+  height: 1080px;
+  width: 100%;
+  background-color: #0f0e13;
+  background-image: radial-gradient(
+      at 0% 0%,
+      hsla(253, 16%, 7%, 1) 0,
+      transparent 50%
+    ),
+    radial-gradient(at 50% 0%, hsla(225, 39%, 30%, 1) 0, transparent 50%),
+    radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
+}
+.bg2 {
+  height: 1080px;
+  width: 100%;
+  background-color: #0f0e13;
+  background-image: radial-gradient(
+      at 0% 0%,
+      hsla(253, 16%, 7%, 1) 0,
+      transparent 50%
+    ),
+    radial-gradient(at 50% 100%, hsla(225, 39%, 25%, 1) 0, transparent 50%);
+  border-top: solid 1px white;
+}
 
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: Segoe UI;
-    color: aliceblue;
+.header {
+  width: 100%;
+  height: 64px;
+  /* background-color: rgba(112, 112, 112, 0.459); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.bg1{
-    /* height: 1080px; */
-    height: 1080px;
-    width: 100%;
-    background-color: #0f0e13;
-    background-image: radial-gradient(at 0% 0%,hsla(253,16%,7%,1) 0,transparent 50%),radial-gradient(at 50% 0%,hsla(225,39%,30%,1) 0,transparent 50%),radial-gradient(at 100% 0%,hsla(339,49%,30%,1) 0,transparent 50%);
+.container {
+  width: 80%;
+  border-radius: 20px;
+  /* background-color: rgba(0, 0, 0, 0.199); */
+  display: flex;
+  margin-top: 40px;
+  justify-content: space-between;
+  align-items: center;
 }
-.bg2{
-    height: 1080px;
-    width: 100%;
-    background-color: #0f0e13;
-    background-image: radial-gradient(at 0% 0%,hsla(253,16%,7%,1) 0,transparent 50%),radial-gradient(at 50% 100%,hsla(225,39%,25%,1) 0,transparent 50%);
-    border-top: solid 1px white;
+.logo {
+  width: 35%;
+  /* height: 60px; */
+  /* background-color: rgb(241, 253, 76); */
+  font-size: 50px;
+  font-weight: bold;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-left: 10px;
+  line-height: 50px;
+  color: aliceblue;
 }
+.navigation {
+  width: 40%;
+  height: 60px;
+  /* background-color: rgb(9, 255, 0); */
+}
+.nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 50%;
+}
+.nav-link {
+  overflow: hidden;
+  list-style-type: none;
+  width: 20%;
+  height: 60px;
+  font-family: Segoe UI;
 
-.header{
-    width: 100%;
-   height: 64px;
-    /* background-color: rgba(112, 112, 112, 0.459); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-}
-.container{
-    width: 80%;
-    border-radius: 20px;
-    /* background-color: rgba(0, 0, 0, 0.199); */
-    display: flex;
-    margin-top: 40px;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo{
-    width: 35%;
-    /* height: 60px; */
-    /* background-color: rgb(241, 253, 76); */
-    font-size: 50px;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 10px;
-    line-height: 50px;
-    color: aliceblue;
-}
-.navigation{
-    width: 40%;
-    height: 60px;
-    /* background-color: rgb(9, 255, 0); */
-    
-}
-.nav-bar{
-    display: flex;
-    align-items:center;
-    justify-content: space-evenly;
-    width: 50%;
-}
-.nav-link{
-    overflow: hidden;
-    list-style-type: none;
-    width: 20%;
-    height: 60px;
-    font-family: Segoe UI;
-    
-    /* system-ui,-apple-system,,Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji" */
-    /* background-color: rgb(189, 99, 99); */
-    text-align: center;
-    font-size: 18px;
+  /* system-ui,-apple-system,,Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji" */
+  /* background-color: rgb(189, 99, 99); */
+  text-align: center;
+  font-size: 18px;
 
-    line-height: 60px;
-    color: aliceblue;
-    transition: .2s;
-    cursor: pointer;
+  line-height: 60px;
+  color: aliceblue;
+  transition: 0.2s;
+  cursor: pointer;
 }
-.nav-link a{
-    text-decoration: none;
-    color: aliceblue;
+.nav-link a {
+  text-decoration: none;
+  color: aliceblue;
 }
-.nav-link a:hover{
-    /* background-color: #00ccff; */
-    /* transform: scale(1.2); */
-    /* box-shadow: #2fceff70 0px 0px 39px 0px; */
-    /* border-radius: 25px;  */
-    color: aqua;
+.nav-link a:hover {
+  /* background-color: #00ccff; */
+  /* transform: scale(1.2); */
+  /* box-shadow: #2fceff70 0px 0px 39px 0px; */
+  /* border-radius: 25px;  */
+  color: aqua;
 }
-.loginB{
-    cursor: pointer;
-    line-height: 60px;
-    width: 6rem;
-    height: 40px;
-    background-color: rgba(41,82,227,1);
-    border-radius: 20px;
-    /* height: 3rem; */
-    list-style-type: none;
-    transition: .2s;
-    margin-right: 10px;
-    display: flex;
-    justify-content: center;
-    color: aliceblue;
-    font-weight: bold;
-    align-items: center;
+.loginB {
+  cursor: pointer;
+  line-height: 60px;
+  width: 6rem;
+  height: 40px;
+  background-color: rgba(41, 82, 227, 1);
+  border-radius: 20px;
+  /* height: 3rem; */
+  list-style-type: none;
+  transition: 0.2s;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  color: aliceblue;
+  font-weight: bold;
+  align-items: center;
 }
-.loginB a{
-    text-decoration: none;
-    color: aliceblue;
-
+.loginB a {
+  text-decoration: none;
+  color: aliceblue;
 }
-.loginB:hover{
-    background-color: rgb(34, 67, 185);
-    /* transform: scale(1.1); */
-    /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
+.loginB:hover {
+  background-color: rgb(34, 67, 185);
+  /* transform: scale(1.1); */
+  /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
 }
 ::marker {
-    color: rgba(0, 128, 0, 0); 
-    
+  color: rgba(0, 128, 0, 0);
 }
-.bg1{
-    display: flex;
-    flex-direction: column;
-    
-
+.bg1 {
+  display: flex;
+  flex-direction: column;
 }
-.login{
-    display: flex;
-    justify-content: center;
+.login {
+  display: flex;
+  justify-content: center;
 }
-.loginF{
-    /* border:white solid 2px; */
+.loginF {
+  /* border:white solid 2px; */
 }
 /* input[type=button]{
     color: #ffffff;
@@ -144,74 +147,62 @@
     border: none;
 } */
 
-.loginF{
-    width: 50%;
+.loginF {
+  width: 50%;
 }
 
 .btn-grad {
-    background-image: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
-   padding: 10px 0px;
-   text-align: center;
-   text-transform: uppercase;
-   transition: 0.5s;
-   background-size: 200% auto;
-   width: 100%;
-   color: white;            
-   border-radius: 10px;
-   display: block;
-   font-size: 20px;
- }
-
- .btn-grad:hover {
-   background-position: right center; /* change the direction of the change here */
-   color: #fff;
-   text-decoration: none;
- }
-
-.containermain{
-    width: 80%;
-    height: 60vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-image: radial-gradient(
+    circle,
+    rgba(136, 0, 255, 1) 0%,
+    rgba(0, 211, 255, 1) 94%
+  );
+  padding: 10px 0px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  width: 100%;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  font-size: 20px;
 }
 
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
 
-
-
-
-
-
-
-
-
-
-
+.containermain {
+  width: 80%;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* for mobile */
 
-
-
-@media (max-width:480px) {
-    .logo{
-        width: 100%;
-    }
-    .container{
-        margin-top: auto;
-        flex-direction: column;
-        width: 95%;
-    }
-    .navigation{
-        width: 100%;
-        height: auto;
-    }
-    .nav-link{
-        width: 100%;
-        text-align: left;
-      
-    }
-    .nav-bar{
-        flex-direction: column;
-    }
-
+@media (max-width: 480px) {
+  .logo {
+    width: 100%;
+  }
+  .container {
+    margin-top: auto;
+    flex-direction: column;
+    width: 95%;
+  }
+  .navigation {
+    width: 100%;
+    height: auto;
+  }
+  .nav-link {
+    width: 100%;
+    text-align: left;
+  }
+  .nav-bar {
+    flex-direction: column;
+  }
 }
