--- a/style/style1.scss
+++ b/style/style1.scss
@@ -75,6 +75,18 @@ $btncolor: #2952e3;
   /* background-color: rgb(9, 255, 0); */
 }
 
+.nav-barIn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  width: 100%;
+}
 .nav-bar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -104,22 +116,22 @@ $btncolor: #2952e3;
   transition: 0.2s;
   cursor: pointer;
   transition: transform 0.2s;
+  a {
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: 600;
+  }
+  a:hover {
+    /* background-color: #00ccff; */
+    /* transform: scale(1.2); */
+    /* box-shadow: #2fceff70 0px 0px 39px 0px; */
+    /* border-radius: 25px;  */
+    color: aqua;
+  }
 }
 .nav-link:hover {
   /* transition: transform .2s; */
   transform: scale(1.2);
-}
-.nav-link a {
-  text-decoration: none;
-  color: aliceblue;
-}
-
-.nav-link a:hover {
-  /* background-color: #00ccff; */
-  /* transform: scale(1.2); */
-  /* box-shadow: #2fceff70 0px 0px 39px 0px; */
-  /* border-radius: 25px;  */
-  color: aqua;
 }
 
 .loginB {
@@ -408,5 +420,16 @@ $btncolor: #2952e3;
     flex-direction: column;
   }
 }
-
+.top-msg {
+  background-color: rgba(236, 236, 236, 0.144);
+  width: 15vw;
+  position: fixed;
+  z-index: 1;
+  padding: 15px 0px;
+  color: #00d3ff;
+  border-radius: 20px;
+  // margin: 0 auto;
+  margin-left: 40vw;
+  text-align: center;
+}
 /*# sourceMappingURL=style1.css.map */
