--- a/style/style1.css
+++ b/style/style1.css
@@ -50,10 +50,11 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  gap: 10px;
 }
 
 .logo {
-  width: 35%;
+  width: 150px;
   /* height: 60px; */
   /* background-color: rgb(241, 253, 76); */
   font-size: 50px;
@@ -81,6 +82,7 @@
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   width: 100%;
+  margin-right: -10px;
 }
 
 .nav-bar {
@@ -93,7 +95,11 @@
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
-  width: 50%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px;
+  min-width: 50%;
 }
 
 .nav-link {
@@ -160,6 +166,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-left: 20px;
 }
 
 .loginB a {
@@ -439,5 +446,30 @@
   border-radius: 20px;
   margin-left: 40vw;
   text-align: center;
+}
+
+.userbox {
+  width: 40vw;
+  background-color: rgba(0, 0, 0, 0.178);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 50px auto;
+  border-radius: 20px;
+}
+
+.userbox .details p {
+  margin: 25px 0px;
 }
 /*# sourceMappingURL=style1.css.map */
