--- a/style/style1.css
+++ b/style/style1.css
@@ -10,7 +10,7 @@
   height: 1080px;
   width: 100%;
   background-color: #0f0e13;
-  background-image: radial-gradient(at 0% 0%, #100f15 0, transparent 50%), radial-gradient(at 50% 0%, #2f3e6a 0, transparent 50%), radial-gradient(at 100% 0%, #722741 0, transparent 50%);
+  background-image: radial-gradient(at 400% 400%, #100f15 0, transparent 50%), radial-gradient(at 150% 0%, #2f3e6a 0, transparent 50%), radial-gradient(at 130% 0%, #722741 0, transparent 50%);
 }
 
 .bg2 {
@@ -37,7 +37,7 @@
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   border-radius: 20px;
   /* background-color: rgba(0, 0, 0, 0.199); */
   display: -webkit-box;
@@ -471,5 +471,109 @@
 
 .userbox .details p {
   margin: 25px 0px;
+}
+
+.body {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 87vw;
+  margin: 100px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.body .PcContainer {
+  width: 58vw;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.body .PcContainer .core {
+  padding: 20px;
+  background-color: #211f349c;
+  width: 100%;
+  height: 500px;
+  border-radius: 30px;
+}
+
+.body .PcContainer .core p {
+  color: white;
+}
+
+.body .PcContainer .core .heading {
+  border: 10px solid #ad00ff;
+  border-image-slice: 1;
+  border-width: 2px;
+  border-radius: 20px;
+  font-size: 25px;
+  font-weight: 700;
+  padding: 10px 40px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #211f34;
+  margin-top: -50px;
+  margin-left: 20px;
+}
+
+.body .PcContainer .core .inside {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 60px;
+}
+
+.body .PcContainer .core .compo {
+  margin-top: 30px;
+  margin-left: 25px;
+}
+
+.body .PcContainer .core .compo p {
+  margin-bottom: 20px;
+  font-size: 21px;
+  font-weight: 600;
+}
+
+.body .PcContainer .core .compo .option {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  gap: 20px;
+}
+
+.body .PcContainer .core .compo .option select {
+  font-size: 15px;
+  padding: 5px 15px;
+  text-align: center;
+  background-color: #2e3249;
+  border: 3px solid #ad00ff;
+  border-radius: 15px;
+}
+
+.body .PcContainer .core .compo .option select option {
+  color: white;
+}
+
+.body .pc {
+  margin-left: 65vw;
+  position: -webkit-sticky;
+  position: fixed;
+  top: 175px;
+}
+
+.body .pc img {
+  width: 350px;
 }
 /*# sourceMappingURL=style1.css.map */
