--- a/style/style1.scss
+++ b/style/style1.scss
@@ -12,9 +12,9 @@ $btncolor: #2952e3;
   height: 1080px;
   width: 100%;
   background-color: #0f0e13;
-  background-image: radial-gradient(at 0% 0%, #100f15 0, transparent 50%),
-    radial-gradient(at 50% 0%, #2f3e6a 0, transparent 50%),
-    radial-gradient(at 100% 0%, #722741 0, transparent 50%);
+  background-image: radial-gradient(at 400% 400%, #100f15 0, transparent 50%),
+    radial-gradient(at 150% 0%, #2f3e6a 0, transparent 50%),
+    radial-gradient(at 130% 0%, #722741 0, transparent 50%);
 }
 
 .bg2 {
@@ -42,7 +42,7 @@ $btncolor: #2952e3;
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   border-radius: 20px;
   /* background-color: rgba(0, 0, 0, 0.199); */
   display: -webkit-box;
@@ -455,4 +455,94 @@ $btncolor: #2952e3;
     margin: 25px 0px;
   }
 }
-/*# sourceMappingURL=style1.css.map */
+
+.body {
+  height: fit-content;
+  width: 87vw;
+  // background-color: #0f0e13;
+  // margin-top: 50px;
+  margin: 100px auto;
+  display: flex;
+  justify-content: space-between;
+  .PcContainer {
+    width: 58vw;
+    height: fit-content;
+    .core {
+      padding: 20px;
+      background-color: #211f349c;
+      width: 100%;
+      height: 500px;
+      border-radius: 30px;
+      p {
+        color: white;
+      }
+      .heading {
+        border: 10px solid #ad00ff;
+        border-image-slice: 1;
+        border-width: 2px;
+        border-radius: 20px;
+        font-size: 25px;
+        font-weight: 700;
+        padding: 10px 40px;
+        width: fit-content;
+        background-color: #211f34;
+        margin-top: -50px;
+        margin-left: 20px;
+      }
+      .inside {
+        display: flex;
+        gap: 60px;
+      }
+
+      .compo {
+        margin-top: 30px;
+        margin-left: 25px;
+        p {
+          margin-bottom: 20px;
+          font-size: 21px;
+          font-weight: 600;
+          // text-align: center;
+        }
+        .option {
+          #company * {
+          }
+          display: flex;
+          justify-content: space-between;
+          width: fit-content;
+          gap: 20px;
+          select {
+            font-size: 15px;
+            padding: 5px 15px;
+            text-align: center;
+            background-color: #2e3249;
+            border: 3px solid #ad00ff;
+            border-radius: 15px;
+            option {
+              color: white;
+            }
+          }
+        }
+      }
+      // .gpu {
+      //   margin-top: 30px;
+      //   margin-left: 25px;
+      //   p {
+      //     margin-bottom: 20px;
+      //   }
+      // }
+    }
+  }
+  .pc {
+    // padding-right: 50px;
+    margin-left: 65vw;
+    // margin-bottom: 50px;
+    position: -webkit-sticky;
+    position: fixed;
+    top: 175px;
+
+    img {
+      width: 350px;
+    }
+  }
+}
+// *# sourceMappingURL=style1.css.map */
