--- a/style/style1.css
+++ b/style/style1.css
@@ -576,4 +576,23 @@
 .body .pc img {
   width: 350px;
 }
+
+.row {
+  margin: 30px;
+  margin-left: 90px;
+}
+
+.column {
+  margin: 0 0 0 10px;
+  display: block;
+  float: left;
+  padding: 5px;
+  width: 44%;
+}
+
+.column img {
+  width: 100%;
+  height: auto;
+  margin: 5px;
+}
 /*# sourceMappingURL=style1.css.map */
