--- a/style/style1.scss
+++ b/style/style1.scss
@@ -1,434 +1,20 @@
 $btncolor: #2952e3;
-
 * {
   margin: 0px;
   padding: 0px;
   font-family: Segoe UI;
   color: rgb(182, 223, 255);
 }
+@import "components/_header";
+@import "components/_bg";
+@import "components/loginF";
+@import "components/_signUp";
+@import "components/_mobile";
+@import "components/_pcbuilder";
+@import "components/_homePage";
+@import "components/_profile";
 
-.bg1 {
-  /* height: 1080px; */
-  height: 1080px;
-  width: 100%;
-  background-color: #0f0e13;
-  background-image: radial-gradient(at 400% 400%, #100f15 0, transparent 50%),
-    radial-gradient(at 150% 0%, #2f3e6a 0, transparent 50%),
-    radial-gradient(at 130% 0%, #722741 0, transparent 50%);
-}
-
-.bg2 {
-  height: 1080px;
-  width: 100%;
-  background-color: #0f0e13;
-  background-image: radial-gradient(at 0% 0%, #100f15 0, transparent 50%),
-    radial-gradient(at 50% 100%, #273359 0, transparent 50%);
-  border-top: solid 1px white;
-}
-
-.header {
-  width: 100%;
-  height: 64px;
-  /* background-color: rgba(112, 112, 112, 0.459); */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.container {
-  width: 90%;
-  border-radius: 20px;
-  /* background-color: rgba(0, 0, 0, 0.199); */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 40px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  gap: 10px;
-}
-.logom {
-  // width: 10px;
-}
-
-.logo {
-  width: 150px;
-  /* height: 60px; */
-  /* background-color: rgb(241, 253, 76); */
-  font-size: 50px;
-  font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-left: 10px;
-  line-height: 50px;
-  color: aliceblue;
-}
-
-.navigation {
-  width: 40%;
-  height: 60px;
-  /* background-color: rgb(9, 255, 0); */
-}
-
-.nav-barIn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
-  width: 100%;
-  margin-right: -10px;
-}
-.nav-bar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
-  width: fit-content;
-  padding: 5px;
-  min-width: 50%;
-}
-
-.nav-link {
-  overflow: hidden;
-  list-style-type: none;
-  width: 20%;
-  height: 60px;
-  font-family: Segoe UI;
-  /* system-ui,-apple-system,,Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji" */
-  /* background-color: rgb(189, 99, 99); */
-  text-align: center;
-  font-size: 18px;
-  line-height: 60px;
-  color: aliceblue;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  cursor: pointer;
-  transition: transform 0.2s;
-  a {
-    text-decoration: none;
-    color: aliceblue;
-    font-weight: 600;
-  }
-  a:hover {
-    /* background-color: #00ccff; */
-    /* transform: scale(1.2); */
-    /* box-shadow: #2fceff70 0px 0px 39px 0px; */
-    /* border-radius: 25px;  */
-    color: aqua;
-  }
-}
-.nav-link:hover {
-  /* transition: transform .2s; */
-  transform: scale(1.2);
-}
-
-.loginB {
-  cursor: pointer;
-  line-height: 60px;
-  width: 6rem;
-  height: 40px;
-  background-color: #2952e3;
-  border-radius: 20px;
-  /* height: 3rem; */
-  list-style-type: none;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  margin-right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  color: aliceblue;
-  font-weight: bold;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-left: 20px;
-}
-
-.loginB a {
-  text-decoration: none;
-  color: aliceblue;
-}
-
-.loginB:hover {
-  background-color: #2243b9;
-  transform: scale(1.1);
-  /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
-}
-
-::marker {
-  color: rgba(0, 128, 0, 0);
-}
-
-.bg1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  // align-items: center;
-}
-
-.login {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  height: 100vh;
-  margin-top: 62px;
-}
-
-.loginF {
-  /* border:white solid 2px; */
-}
-
-/* input[type=button]{
-      color: #ffffff;
-      background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
-      width: 100%;
-      height: 40px;
-      
-      border-radius: 5px;
-      border: none;
-  } */
-.loginF {
-  width: 40%;
-  background-color: #00000054;
-  padding: 30px 30px;
-  border-radius: 20px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  padding-bottom: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  // align-items: center;
-  color: #b0c3ff;
-
-  p {
-    margin-top: 20px;
-    text-align: center;
-  }
-}
-
-.loginF h1 {
-  margin-bottom: 30px;
-}
-
-.loginF input[type="text"] {
-  width: 95%;
-  height: 40px;
-  padding: 0px 0px 0px 20px;
-  border-radius: 10px;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  background-color: rgba(63, 55, 127, 0.377);
-  border: none;
-}
-
-.loginF input[type="password"] {
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  margin-top: 10px;
-  background-color: rgba(63, 55, 127, 0.349);
-  border: none;
-}
-
-.loginF label {
-  color: #7494ff;
-  font-size: 15px;
-  margin-top: 5px;
-}
-.loginF {
-  /* border:white solid 2px; */
-}
-
-/* input[type=button]{
-      color: #ffffff;
-      background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
-      width: 100%;
-      height: 40px;
-      
-      border-radius: 5px;
-      border: none;
-  } */
-.signupF {
-  width: 40%;
-  background-color: #00000054;
-  padding: 30px 30px;
-  border-radius: 20px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  padding-bottom: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  // align-items: center;
-  color: #b0c3ff;
-}
-
-.signupF h1 {
-  margin-bottom: 30px;
-}
-
-.signupF input[type="text"] {
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  background-color: rgba(63, 55, 127, 0.377);
-  border: none;
-}
-
-.signupF input[type="password"] {
-  width: 100%;
-  height: 40px;
-  border-radius: 10px;
-  margin-top: 10px;
-  background-color: rgba(63, 55, 127, 0.349);
-  border: none;
-}
-
-.signupF label {
-  color: #7494ff;
-  font-size: 15px;
-  margin-top: 5px;
-}
-.signupF p {
-  text-align: center;
-  color: rgb(159, 236, 255);
-  margin-top: 20px;
-  margin-top: 30px;
-  a {
-    background-color: $btncolor;
-    padding: 5px 10px;
-    border-radius: 20px;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-decoration: none;
-    transition: 0.2s;
-    margin-left: 10px;
-  }
-  a:hover {
-    background-color: #4a6ce6;
-    transform: scale(1.5);
-  }
-}
-
-.btn-grad {
-  background-image: radial-gradient(circle, #8800ff 0%, #00d3ff 94%);
-  padding: 10px 10px;
-  text-align: center;
-  text-transform: uppercase;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  background-size: 200% auto;
-  width: 100%;
-  color: white;
-  border-radius: 10px;
-  display: block;
-  font-size: 20px;
-}
-
-.btn-grad:hover {
-  background-position: right center;
-  /* change the direction of the change here */
-  color: #fff;
-  text-decoration: none;
-}
-
-.containermain {
-  width: 80%;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-/* for mobile */
-@media (max-width: 480px) {
-  .logo {
-    width: 100%;
-  }
-  .container {
-    margin-top: auto;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 95%;
-  }
-  .navigation {
-    width: 100%;
-    height: auto;
-  }
-  .nav-link {
-    width: 100%;
-    text-align: left;
-  }
-  .nav-bar {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-}
+// eror msg styling
 .top-msg {
   background-color: rgba(236, 236, 236, 0.144);
   width: 15vw;
@@ -441,128 +27,5 @@ $btncolor: #2952e3;
   margin-left: 40vw;
   text-align: center;
 }
-.userbox {
-  width: 40vw;
-  background-color: rgba(0, 0, 0, 0.178);
-  height: fit-content;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 50px auto;
-  border-radius: 20px;
-  .details p {
-    margin: 25px 0px;
-  }
-}
 
-.body {
-  height: fit-content;
-  width: 87vw;
-  // background-color: #0f0e13;
-  // margin-top: 50px;
-  margin: 100px auto;
-  display: flex;
-  justify-content: space-between;
-  .PcContainer {
-    width: 58vw;
-    height: fit-content;
-    .core {
-      padding: 20px;
-      background-color: #211f349c;
-      width: 100%;
-      height: 500px;
-      border-radius: 30px;
-      p {
-        color: white;
-      }
-      .heading {
-        border: 10px solid #ad00ff;
-        border-image-slice: 1;
-        border-width: 2px;
-        border-radius: 20px;
-        font-size: 25px;
-        font-weight: 700;
-        padding: 10px 40px;
-        width: fit-content;
-        background-color: #211f34;
-        margin-top: -50px;
-        margin-left: 20px;
-      }
-      .inside {
-        display: flex;
-        gap: 60px;
-      }
-
-      .compo {
-        margin-top: 30px;
-        margin-left: 25px;
-        p {
-          margin-bottom: 20px;
-          font-size: 21px;
-          font-weight: 600;
-          // text-align: center;
-        }
-        .option {
-          #company * {
-          }
-          display: flex;
-          justify-content: space-between;
-          width: fit-content;
-          gap: 20px;
-          select {
-            font-size: 15px;
-            padding: 5px 15px;
-            text-align: center;
-            background-color: #2e3249;
-            border: 3px solid #ad00ff;
-            border-radius: 15px;
-            option {
-              color: white;
-            }
-          }
-        }
-      }
-      // .gpu {
-      //   margin-top: 30px;
-      //   margin-left: 25px;
-      //   p {
-      //     margin-bottom: 20px;
-      //   }
-      // }
-    }
-  }
-  .pc {
-    // padding-right: 50px;
-    margin-left: 65vw;
-    // margin-bottom: 50px;
-    position: -webkit-sticky;
-    position: fixed;
-    top: 175px;
-
-    img {
-      width: 350px;
-    }
-  }
-}
 // *# sourceMappingURL=style1.css.map */
-
-.row{
-  margin: 30px;
-  margin-left: 90px;
-}
-
-.column{
-  margin: 0 0 0 10px;
-  display: block;
-  float: left;
-  padding: 5px;
-  width: 44%;
-} 
-
-.column img{
-  width: 100%;
-  height: auto;
-  margin: 5px;
-}
-
