--- a/style/components/_homePage.scss
+++ b/style/components/_homePage.scss
@@ -1,18 +1,181 @@
+.mainH {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+//here
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+}
+.mySlides {
+  display: none;
+}
+img {
+  vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  margin: auto;
+  height: 80vh;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  // transition: background-color 0.6s ease;
+  -webkit-animation: slide 1s forwards;
+  -webkit-animation-delay: 2s;
+  animation: slide 1s forwards;
+  animation-delay: 2s;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+// finish
+
 .row {
-  margin: 30px;
-  margin-left: 90px;
+  // margin: 30px;
+  // margin-top: 80px;
+  // margin-left: 90px;
+  // width: 96vw;
+  // margin-right: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .column {
-  margin: 0 0 0 10px;
+  // margin: 0 0 0 10px;
   display: block;
   float: left;
-  padding: 5px;
-  width: 44%;
+  // padding: 5px;
+  width: 50%;
+  margin-left: 5px;
+}
+.columnR {
+  margin: 0 10px 0 10px;
+  display: block;
+  float: left;
+  // padding: 5px;
+  width: 50%;
 }
 
 .column img {
   width: 100%;
   height: auto;
-  margin: 5px;
+  // margin: 5px;
+  margin-top: 25px;
+  border: solid rgba(0, 255, 255, 0.185);
+  border-radius: 20px;
+}
+.columnR img {
+  width: 100%;
+  height: auto;
+  // margin: 5px;
+  margin-top: 25px;
+  border: solid rgba(0, 255, 255, 0.185);
+  border-radius: 20px;
+}
+.pcbuilderH {
+  height: 1000px;
+  img {
+    width: 98.5vw;
+  }
+  &:hover {
+  }
 }
