--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -64,6 +64,9 @@
   width: 100%;
   margin-right: -10px;
 }
+.profileicon {
+  // margin-top: 0px;
+}
 .nav-bar {
   display: -webkit-box;
   display: -ms-flexbox;
